Comment out all the files in CMakeLists

--- a/src/agisw/CMakeLists.txt
+++ b/src/agisw/CMakeLists.txt
@@ -1,16 +1,16 @@
 add_library(agisw OBJECT
-    swddraw.cpp
-    swddraw.h
-    swemitrunall.cpp
-    swemitrunall.h
-    swpipe.cpp
-    swpipe.h
-    swrend.cpp
-    swrend.h
-    swrsys.cpp
-    swrsys.h
-    swtexdef.cpp
-    swtexdef.h
+    # swddraw.cpp
+    # swddraw.h
+    # swemitrunall.cpp
+    # swemitrunall.h
+    # swpipe.cpp
+    # swpipe.h
+    # swrend.cpp
+    # swrend.h
+    # swrsys.cpp
+    # swrsys.h
+    # swtexdef.cpp
+    # swtexdef.h
 )
 
 target_link_libraries(agisw hooking)
