--- a/src/agiworld/CMakeLists.txt
+++ b/src/agiworld/CMakeLists.txt
@@ -1,32 +1,32 @@
 add_library(agiworld OBJECT
-    bone.cpp
-    bone.h
-    getmesh.cpp
-    getmesh.h
-    getmodel.cpp
-    getmodel.h
-    meshlight.cpp
-    meshlight.h
-    meshload.cpp
-    meshload.h
-    meshmodel.cpp
-    meshmodel.h
-    meshrend.cpp
-    meshrend.h
-    meshset.cpp
-    meshset.h
-    mrkni.cpp
-    mrkni.h
-    packnorm.cpp
-    packnorm.h
-    quality.cpp
-    quality.h
-    skeleton.cpp
-    skeleton.h
-    texsheet.cpp
-    texsheet.h
-    texsort.cpp
-    texsort.h
+    # bone.cpp
+    # bone.h
+    # getmesh.cpp
+    # getmesh.h
+    # getmodel.cpp
+    # getmodel.h
+    # meshlight.cpp
+    # meshlight.h
+    # meshload.cpp
+    # meshload.h
+    # meshmodel.cpp
+    # meshmodel.h
+    # meshrend.cpp
+    # meshrend.h
+    # meshset.cpp
+    # meshset.h
+    # mrkni.cpp
+    # mrkni.h
+    # packnorm.cpp
+    # packnorm.h
+    # quality.cpp
+    # quality.h
+    # skeleton.cpp
+    # skeleton.h
+    # texsheet.cpp
+    # texsheet.h
+    # texsort.cpp
+    # texsort.h
 )
 
 target_link_libraries(agiworld hooking)
