--- a/src/mmaudio/CMakeLists.txt
+++ b/src/mmaudio/CMakeLists.txt
@@ -1,32 +1,32 @@
 add_library(mmaudio OBJECT
-    audstream.cpp
-    audstream.h
-    cd.cpp
-    cd.h
-    crevbuf.cpp
-    crevbuf.h
-    creverb.cpp
-    creverb.h
-    dsglobal.cpp
-    dsglobal.h
-    dupbufcreator.cpp
-    dupbufcreator.h
-    eaxguid.cpp
-    eaxguid.h
-    head.cpp
-    head.h
-    manager.cpp
-    manager.h
-    mixer.cpp
-    mixer.h
-    mmvoicecommentary.cpp
-    mmvoicecommentary.h
-    sound.cpp
-    sound.h
-    soundobj.cpp
-    soundobj.h
-    streamobj.cpp
-    streamobj.h
+    # audstream.cpp
+    # audstream.h
+    # cd.cpp
+    # cd.h
+    # crevbuf.cpp
+    # crevbuf.h
+    # creverb.cpp
+    # creverb.h
+    # dsglobal.cpp
+    # dsglobal.h
+    # dupbufcreator.cpp
+    # dupbufcreator.h
+    # eaxguid.cpp
+    # eaxguid.h
+    # head.cpp
+    # head.h
+    # manager.cpp
+    # manager.h
+    # mixer.cpp
+    # mixer.h
+    # mmvoicecommentary.cpp
+    # mmvoicecommentary.h
+    # sound.cpp
+    # sound.h
+    # soundobj.cpp
+    # soundobj.h
+    # streamobj.cpp
+    # streamobj.h
 )
 
 target_link_libraries(mmaudio hooking)
