--- a/src/mmbangers/CMakeLists.txt
+++ b/src/mmbangers/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_library(mmbangers OBJECT
-    active.cpp
-    active.h
-    banger.cpp
-    banger.h
-    data.cpp
-    data.h
-    dof.cpp
-    dof.h
+    # active.cpp
+    # active.h
+    # banger.cpp
+    # banger.h
+    # data.cpp
+    # data.h
+    # dof.cpp
+    # dof.h
 )
 
 target_link_libraries(mmbangers hooking)
