--- a/src/mmeffects/CMakeLists.txt
+++ b/src/mmeffects/CMakeLists.txt
@@ -1,24 +1,24 @@
 add_library(mmeffects OBJECT
-    birth.cpp
-    birth.h
-    card2d.cpp
-    card2d.h
-    damage.cpp
-    damage.h
-    linespark.cpp
-    linespark.h
-    meshform.cpp
-    meshform.h
-    mmnumber.cpp
-    mmnumber.h
-    mmtext.cpp
-    mmtext.h
-    mousesteerbar.cpp
-    mousesteerbar.h
-    ptx.cpp
-    ptx.h
-    vehform.cpp
-    vehform.h
+    # birth.cpp
+    # birth.h
+    # card2d.cpp
+    # card2d.h
+    # damage.cpp
+    # damage.h
+    # linespark.cpp
+    # linespark.h
+    # meshform.cpp
+    # meshform.h
+    # mmnumber.cpp
+    # mmnumber.h
+    # mmtext.cpp
+    # mmtext.h
+    # mousesteerbar.cpp
+    # mousesteerbar.h
+    # ptx.cpp
+    # ptx.h
+    # vehform.cpp
+    # vehform.h
 )
 
 target_link_libraries(mmeffects hooking)
