--- a/src/mmnetwork/CMakeLists.txt
+++ b/src/mmnetwork/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(mmnetwork OBJECT
-    netobject.cpp
-    netobject.h
-    network.cpp
-    network.h
+    # netobject.cpp
+    # netobject.h
+    # network.cpp
+    # network.h
 )
 
 target_link_libraries(mmnetwork hooking)
