--- a/src/agi/CMakeLists.txt
+++ b/src/agi/CMakeLists.txt
@@ -1,50 +1,50 @@
 add_library(agi OBJECT
-    bitmap.cpp
-    bitmap.h
-    cmodel.cpp
-    cmodel.h
-    cmodel8.cpp
-    cmodel8.h
-    cmodelx.cpp
-    cmodelx.h
-    dlp.cpp
-    dlp.h
-    dlptmpl.cpp
-    dlptmpl.h
-    error.cpp
-    error.h
-    getdlp.cpp
-    getdlp.h
-    light.cpp
-    light.h
-    lmodel.cpp
-    lmodel.h
-    mtldef.cpp
-    mtldef.h
-    mtllib.cpp
-    mtllib.h
-    palette.cpp
-    palette.h
-    physdef.cpp
-    physdef.h
-    physlib.cpp
-    physlib.h
-    pipeline.cpp
-    pipeline.h
-    print.cpp
-    print.h
-    refresh.cpp
-    refresh.h
-    rsys.cpp
-    rsys.h
-    surface.cpp
-    surface.h
-    texdef.cpp
-    texdef.h
-    texlib.cpp
-    texlib.h
-    viewport.cpp
-    viewport.h
+    # bitmap.cpp
+    # bitmap.h
+    # cmodel.cpp
+    # cmodel.h
+    # cmodel8.cpp
+    # cmodel8.h
+    # cmodelx.cpp
+    # cmodelx.h
+    # dlp.cpp
+    # dlp.h
+    # dlptmpl.cpp
+    # dlptmpl.h
+    # error.cpp
+    # error.h
+    # getdlp.cpp
+    # getdlp.h
+    # light.cpp
+    # light.h
+    # lmodel.cpp
+    # lmodel.h
+    # mtldef.cpp
+    # mtldef.h
+    # mtllib.cpp
+    # mtllib.h
+    # palette.cpp
+    # palette.h
+    # physdef.cpp
+    # physdef.h
+    # physlib.cpp
+    # physlib.h
+    # pipeline.cpp
+    # pipeline.h
+    # print.cpp
+    # print.h
+    # refresh.cpp
+    # refresh.h
+    # rsys.cpp
+    # rsys.h
+    # surface.cpp
+    # surface.h
+    # texdef.cpp
+    # texdef.h
+    # texlib.cpp
+    # texlib.h
+    # viewport.cpp
+    # viewport.h
 )
 
 target_link_libraries(agi hooking)
