--- a/src/localize/CMakeLists.txt
+++ b/src/localize/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(localize OBJECT
-    # localize.cpp
-    # localize.h
+    localize.cpp
+    localize.h
 )
 
 target_link_libraries(localize hooking)
