--- a/src/stream/CMakeLists.txt
+++ b/src/stream/CMakeLists.txt
@@ -1,18 +1,18 @@
 add_library(stream OBJECT
-    # filestream.cpp
-    # filestream.h
-    # fsystem.cpp
-    # fsystem.h
+    filestream.cpp
+    filestream.h
+    fsystem.cpp
+    fsystem.h
     # hfsystem.cpp
     # hfsystem.h
-    # problems.cpp
-    # problems.h
-    # sparser.cpp
-    # sparser.h
-    # stream.cpp
-    # stream.h
-    # token.cpp
-    # token.h
+    problems.cpp
+    problems.h
+    sparser.cpp
+    sparser.h
+    stream.cpp
+    stream.h
+    token.cpp
+    token.h
     # vfsystem.cpp
     # vfsystem.h
     # vstream.cpp
