--- a/src/dyna7/CMakeLists.txt
+++ b/src/dyna7/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(dyna7 OBJECT
-    # dyna.cpp
-    # dyna.h
-    # gfx.cpp
-    # gfx.h
+    dyna.cpp
+    dyna.h
+    gfx.cpp
+    gfx.h
 )
 
 target_link_libraries(dyna7 hooking)
