Updated README Fixed HW Rendering Fixed GetMachineName Fixed/Improved DefaultPrinter Implemented most of asMemoryAllocator Fixed dxiChangeDisplaySettings Fixed ModeCallback

--- a/src/data7/CMakeLists.txt
+++ b/src/data7/CMakeLists.txt
@@ -43,6 +43,9 @@ add_library(data7 OBJECT
     str.h
     timer.cpp
     timer.h
+
+    assert.h
+    assert.cpp
 )
 
 target_link_libraries(data7 hooking)
