Added SDL2 Files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,18 +27,15 @@ set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} /IGNORE:4221")
 include_directories(src)
 add_subdirectory(src)
 
-add_library(${PROJECT_NAME} SHARED
+add_library(OpenMM1 SHARED
     loader/OpenMM1.cpp
 )
 
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT OpenMM1)
 
-target_link_libraries(${PROJECT_NAME} dxguid mem midtown)
+target_link_libraries(OpenMM1 dxguid mem midtown)
 
-set_target_properties(${PROJECT_NAME} PROPERTIES
-    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin
+set_target_properties(OpenMM1 PROPERTIES
     LINK_FLAGS "/INCREMENTAL:NO"
     OUTPUT_NAME "dinput"
 )
@@ -48,7 +45,7 @@ if((NOT MM1_GAME_DIRECTORY) AND (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/GameDirecto
 endif()
 
 if(MM1_GAME_DIRECTORY)
-    set_target_properties(${PROJECT_NAME} PROPERTIES
+    set_target_properties(OpenMM1 PROPERTIES
         VS_DEBUGGER_COMMAND "${MM1_GAME_DIRECTORY}/midtown.exe"
         VS_DEBUGGER_WORKING_DIRECTORY "${MM1_GAME_DIRECTORY}"
     )
@@ -58,12 +55,13 @@ if(MM1_GAME_DIRECTORY)
     endif()
 
     if (MM1_COMMAND_LINE)
-        set_target_properties(${PROJECT_NAME} PROPERTIES
+        set_target_properties(OpenMM1 PROPERTIES
             VS_DEBUGGER_COMMAND_ARGUMENTS "${MM1_COMMAND_LINE}"
         )
     endif()
 
-    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${MM1_GAME_DIRECTORY})
+    install(TARGETS OpenMM1 RUNTIME DESTINATION ${MM1_GAME_DIRECTORY})
+    install(FILES ${SDL2_BINARIES} DESTINATION ${MM1_GAME_DIRECTORY})
     install(FILES "extra/midtown.map" DESTINATION ${MM1_GAME_DIRECTORY})
-    install(FILES $<TARGET_PDB_FILE:${PROJECT_NAME}> DESTINATION ${MM1_GAME_DIRECTORY} OPTIONAL)
+    install(FILES $<TARGET_PDB_FILE:OpenMM1> DESTINATION ${MM1_GAME_DIRECTORY} OPTIONAL)
 endif()
