Use SDL2 for window creation + Added SDL2_TTF for font rendering (not implemented yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,6 @@ if(MM1_GAME_DIRECTORY)
     endif()
 
     install(TARGETS OpenMM1 RUNTIME DESTINATION ${MM1_GAME_DIRECTORY})
-    install(FILES ${SDL2_BINARIES} DESTINATION ${MM1_GAME_DIRECTORY})
-    install(FILES "extra/midtown.map" DESTINATION ${MM1_GAME_DIRECTORY})
+    install(FILES "extra/midtown.map" ${SDL2_BINARIES} ${SDL2_TTF_BINARIES} DESTINATION ${MM1_GAME_DIRECTORY})
     install(FILES $<TARGET_PDB_FILE:OpenMM1> DESTINATION ${MM1_GAME_DIRECTORY} OPTIONAL)
 endif()
