Added Ref<T> class

--- a/src/data7/CMakeLists.txt
+++ b/src/data7/CMakeLists.txt
@@ -48,6 +48,8 @@ add_library(data7 OBJECT
     assert.cpp
     cstr.h
     cstr.cpp
+    ref.cpp
+    ref.h
 )
 
 target_link_libraries(data7 hooking)
