Added parts of agiGLRasterizer, though it's not being called while ingame for some reason

--- a/src/agigl/CMakeLists.txt
+++ b/src/agigl/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(agigl OBJECT
     glbitmap.h
     gltexdef.cpp
     gltexdef.h
+    glutils.cpp
+    glutils.h
 )
 
 target_link_libraries(agigl hooking)
