Removed dbghelp linking pragmas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,6 @@ add_link_options(/IGNORE:4099 /NODEFAULTLIB:LIBCMT)
 
 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /OPT:REF")
 
-# This object file does not define any previously undefined public symbols, so it will not be used by any link operation that consumes this library
-set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} /IGNORE:4221")
-
 if (USE_SDL2)
     add_definitions(-DUSE_SDL2=1)
 endif()
@@ -38,7 +35,7 @@ add_library(OpenMM1 SHARED
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT OpenMM1)
 
-target_link_libraries(OpenMM1 dxguid mem midtown)
+target_link_libraries(OpenMM1 midtown mem dxguid dbghelp)
 
 set_target_properties(OpenMM1 PROPERTIES
     LINK_FLAGS "/INCREMENTAL:NO"
