Mapped out bnBone

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ endmacro(arts_add_component)
 add_subdirectory(agi)
 add_subdirectory(agid3d)
 add_subdirectory(agisw)
-# add_subdirectory(agiworld)
+add_subdirectory(agiworld)
 add_subdirectory(arts7)
 add_subdirectory(data7)
 add_subdirectory(dyna7)
