--- a/src/agiworld/CMakeLists.txt
+++ b/src/agiworld/CMakeLists.txt
@@ -1,26 +1,26 @@
 arts_add_component(agiworld
-    # bone.cpp
-    # bone.h
-    # getmesh.cpp
-    # getmesh.h
-    # getmodel.cpp
-    # getmodel.h
-    # meshlight.cpp
-    # meshlight.h
-    # meshload.cpp
-    # meshload.h
+    bone.cpp
+    bone.h
+    getmesh.cpp
+    getmesh.h
+    getmodel.cpp
+    getmodel.h
+    meshlight.cpp
+    meshlight.h
+    meshload.cpp
+    meshload.h
     # meshmodel.cpp
     # meshmodel.h
     # meshrend.cpp
     # meshrend.h
     # meshset.cpp
     # meshset.h
-    # mrkni.cpp
-    # mrkni.h
-    # packnorm.cpp
-    # packnorm.h
-    # quality.cpp
-    # quality.h
+    mrkni.cpp
+    mrkni.h
+    packnorm.cpp
+    packnorm.h
+    quality.cpp
+    quality.h
     # skeleton.cpp
     # skeleton.h
     # texsheet.cpp
