Implement asNode::VerifyTree and eqReplayChannel

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,7 +35,7 @@ add_subdirectory(agiworld)
 add_subdirectory(arts7)
 add_subdirectory(data7)
 add_subdirectory(dyna7)
-# add_subdirectory(eventq7)
+add_subdirectory(eventq7)
 add_subdirectory(localize)
 add_subdirectory(memory)
 # add_subdirectory(mmai)
