Mapped out most of mmStatePack

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,7 @@ add_subdirectory(memory)
 # add_subdirectory(mmcamcs)
 # add_subdirectory(mmcar)
 # add_subdirectory(mmcity)
-# add_subdirectory(mmcityinfo)
+add_subdirectory(mmcityinfo)
 # add_subdirectory(mmdjpeg)
 # add_subdirectory(mmdyna)
 add_subdirectory(mmeffects)
