--- a/src/mmcityinfo/CMakeLists.txt
+++ b/src/mmcityinfo/CMakeLists.txt
@@ -21,8 +21,8 @@ arts_add_component(mmcityinfo
     # racerecord.h
     # roadsect.cpp
     # roadsect.h
-    # state.cpp
-    # state.h
+    state.cpp
+    state.h
     # vehinfo.cpp
     # vehinfo.h
     # vehlist.cpp
