Mapped out some structs + Improved asMemoryAllocator

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,7 +44,7 @@ add_subdirectory(memory)
 # add_subdirectory(mmbangers)
 # add_subdirectory(mmcamcs)
 # add_subdirectory(mmcar)
-# add_subdirectory(mmcity)
+add_subdirectory(mmcity)
 add_subdirectory(mmcityinfo)
 # add_subdirectory(mmdjpeg)
 # add_subdirectory(mmdyna)
@@ -52,7 +52,7 @@ add_subdirectory(mmeffects)
 # add_subdirectory(mmgame)
 # add_subdirectory(mminput)
 # add_subdirectory(mmnetwork)
-# add_subdirectory(mmphysics)
+add_subdirectory(mmphysics)
 # add_subdirectory(mmui)
 # add_subdirectory(mmwidget)
 add_subdirectory(pcwindis)
